@@ -182,6 +182,19 @@ name|lucene
 operator|.
 name|search
 operator|.
+name|TopDocs
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
 name|Weight
 import|;
 end_import
@@ -452,6 +465,8 @@ block|,
 literal|"t1 t2 t2 t1"
 block|,
 literal|"g x x g g x x x g g x x g"
+block|,
+literal|"go to webpage"
 block|}
 decl_stmt|;
 DECL|method|makeQuery
@@ -2388,7 +2403,119 @@ name|spans
 argument_list|)
 expr_stmt|;
 block|}
-comment|/*     protected String[] docFields = {     "w1 w2 w3 w4 w5",     "w1 w3 w2 w3 zz",     "w1 xx w2 yy w3",     "w1 w3 xx w2 yy w3 zz",     "t1 t2 t2 t1",     "g x x g g x x x g g x x g"   };    */
+DECL|method|testNestedGaps
+specifier|public
+name|void
+name|testNestedGaps
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|SpanQuery
+name|q
+init|=
+name|SpanNearQuery
+operator|.
+name|newOrderedNearQuery
+argument_list|(
+name|FIELD
+argument_list|)
+operator|.
+name|addClause
+argument_list|(
+operator|new
+name|SpanOrQuery
+argument_list|(
+operator|new
+name|SpanTermQuery
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+name|FIELD
+argument_list|,
+literal|"open"
+argument_list|)
+argument_list|)
+argument_list|,
+name|SpanNearQuery
+operator|.
+name|newOrderedNearQuery
+argument_list|(
+name|FIELD
+argument_list|)
+operator|.
+name|addClause
+argument_list|(
+operator|new
+name|SpanTermQuery
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+name|FIELD
+argument_list|,
+literal|"go"
+argument_list|)
+argument_list|)
+argument_list|)
+operator|.
+name|addGap
+argument_list|(
+literal|1
+argument_list|)
+operator|.
+name|build
+argument_list|()
+argument_list|)
+argument_list|)
+operator|.
+name|addClause
+argument_list|(
+operator|new
+name|SpanTermQuery
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+name|FIELD
+argument_list|,
+literal|"webpage"
+argument_list|)
+argument_list|)
+argument_list|)
+operator|.
+name|build
+argument_list|()
+decl_stmt|;
+name|TopDocs
+name|topDocs
+init|=
+name|searcher
+operator|.
+name|search
+argument_list|(
+name|q
+argument_list|,
+literal|1
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|6
+argument_list|,
+name|topDocs
+operator|.
+name|scoreDocs
+index|[
+literal|0
+index|]
+operator|.
+name|doc
+argument_list|)
+expr_stmt|;
+block|}
+comment|/*     protected String[] docFields = {     "w1 w2 w3 w4 w5",     "w1 w3 w2 w3 zz",     "w1 xx w2 yy w3",     "w1 w3 xx w2 yy w3 zz",     "t1 t2 t2 t1",     "g x x g g x x x g g x x g",     "go to webpage"   };    */
 block|}
 end_class
 end_unit
